--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,12 +1,15 @@
 .header {
-	background-color: #6a097d;
+    background-color: #FFB6A3;
+    /* background-color: #D85530; */
+	/* background-color: #6a097d; */
 	display: flex;
 	align-items: center;
 	position: sticky;
 	top: 0;
 	z-index: 100;
 	height: 60px;
-	object-fit: contain;
+    object-fit: contain;
+    border-bottom: 1px solid #D85530;
 }
 .header > img {
 	max-width: 200px;
@@ -26,14 +29,14 @@
 .header__searchIcon {
 	padding: 5px;
 	height: 22px !important;
-	color: #fff;
+	color: #D85530;
 	background-color: black;
 }
 .header__nav {
 	display: flex;
 	justify-content: space-evenly;
 	margin: 15px;
-	color: #fff;
+	color: #D85530;
 }
 
 .header__option {
@@ -53,7 +56,7 @@
 .header__optionBasket {
 	display: flex;
 	align-items: center;
-	color: #fff;
+	color:#D85530;
 	margin-right: 20px;
 }
 .header__basketCount {
