--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -1,4 +1,9 @@
 .home {
+	display: flex;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1500px;
 }
 
 .home__container {
@@ -7,7 +12,15 @@
 .home__image {
 	width: 100%;
 	z-index: -1;
-	margin-top: -200px;
-	/* margin-bottom: -150px; */
-	/* mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); */
+	margin-bottom: -150px;
+	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.home__row {
+	display: flex;
+	width: 100%;
+	z-index: 1;
+	margin-left: 5px;
+    margin-right: 5px;
+    justify-content: center;
 }
