feat: checkout view
update some styles after added Link to buttons
added route to app.js
checkout view is displayed

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,6 +1,6 @@
 .header {
-    background-color: #FFB6A3;
-    /* background-color: #D85530; */
+	background-color: #ffb6a3;
+	/* background-color: #D85530; */
 	/* background-color: #6a097d; */
 	display: flex;
 	align-items: center;
@@ -8,10 +8,10 @@
 	top: 0;
 	z-index: 100;
 	height: 60px;
-    object-fit: contain;
-    border-bottom: 1px solid #D85530;
+	object-fit: contain;
+	border-bottom: 1px solid #d85530;
 }
-.header > img {
+.header__logo {
 	max-width: 200px;
 	margin: 0 20px;
 }
@@ -29,14 +29,14 @@
 .header__searchIcon {
 	padding: 5px;
 	height: 22px !important;
-	color: #D85530;
+	color: #d85530;
 	background-color: black;
 }
 .header__nav {
 	display: flex;
 	justify-content: space-evenly;
 	margin: 15px;
-	color: #D85530;
+	color: #d85530;
 }
 
 .header__option {
@@ -56,10 +56,11 @@
 .header__optionBasket {
 	display: flex;
 	align-items: center;
-	color:#D85530;
+	color: #d85530;
 	margin-right: 20px;
 }
 .header__basketCount {
 	margin-right: 10px;
 	margin-left: 10px;
+	text-decoration: none;
 }
